plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.ko'
version = '0.0.16-SNAPSHOT'

java {
	sourceCompatibility = '20'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-maven-plugin:3.1.3'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation "org.springframework.boot:spring-boot-starter-security"
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'ch.qos.logback:logback-classic:1.4.8'
	implementation 'ch.qos.logback:logback-core:1.4.8'
	implementation 'org.jsoup:jsoup:1.15.3'
	implementation 'org.simplejavamail:simple-java-mail:8.1.3'
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.562'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.1.5'
	implementation 'org.webjars:bootstrap:5.3.2'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
    testImplementation 'junit:junit:4.13.1'
    compileOnly 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

springBoot {
	mainClass = 'com.ko.footballupdater.FootballUpdaterApplication'
	buildInfo()
}

jar {
	manifest {
		attributes 'Main-Class': "com.ko.footballupdater.FootballUpdaterApplication"
	}
}

bootJar {
	launchScript()
	manifest {
		attributes 'Start-Class': "com.ko.footballupdater.FootballUpdaterApplication"
		attributes 'Main-Class': "org.springframework.boot.loader.JarLauncher"
	}
}

test {
	useJUnitPlatform()
}